# zfin

./: .eslintrc  .gitignore  .npmrc  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  TODO.txt  agr.gradle  build.gradle  build.test.gradle  build.xml  console.gradle  convert-zfbook-to-static.groovy  eslint.config.js  generate-git-info.sh  killConnectionsToPostgres.sql  make.default.apg.rules  make.default.rules  make.include  package-lock.json  package.json  patch4438.sql  playwright.config.ts  properties-presentation.md  settings.gradle  setupTestsReports.gradle  simpleDirectoryCopyTask.gradle  solr-9-upgrade-notes.txt  taar16_fb2595.fa  tsconfig.json  tsconfig.typecheck.json  webpack.config.js  zfin-properties-pullTaar16-init.xml
.githooks/: helpers  post-checkout  post-merge  post-rewrite  pre-commit  pre-push
ansible/: start_zfin.sh  start_zfin.yml
blastscripts/: createBlastDatabase.sh  createDevBlastDatabases.sh  createProductionBlastDatabases.sh
buildfiles/: agr.xml  allfilter.xml  base-properties.xml  fixKey.sh  generateVersion.sh  gwt.xml  indexer.xml  jenkins.xml  liquibase.xml  log4j.xml  performance.xml  properties.xml  serialization.xml  shipper.xml  solr-ant.xml  test.xml  tomcat.xml  unused.xml  usage.xml  utilities.xml  warehouse.xml  zfin_properties_footer.jsp
cgi-bin/: DebugWebdriver  Figures.pl  Makefile  SuperWebdriver  (+68 more)
cgi-bin/cgiemail-1.6/: ChangeLog  Makefile  Makefile.in  README  acconfig.h  cgi-ptypes.h  cgi.h  cgi.h.in  cgicso  cgicso.c  cgicso.h  cgiecho  cgiecho.c  cgiemail  cgiemail.c  cgifile  cgifile.c  cgilib.c  cgilibcso.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  csoget.c  finger.c  mit-copyright.h  testce.html  testce.html.in  testce.txt
(+17488 files in other folders)
